hide the overflow of the html body to avoid showing a scrollbar for a short time between window resize

--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -52,3 +52,7 @@
 .non-draggable {
   -webkit-app-region: no-drag;
 }
+
+body {
+  overflow: hidden;
+}
